# microio

./: .gitignore  LICENSE  README.md  pyproject.toml
microio/: __init__.py  cli.py  workspace.py
microio/common/: __init__.py  constants.py  logging_utils.py  models.py  mutations.py  ngff.py  units.py  warnings.py
microio/reader/: __init__.py  extras.py  fixtures.py  labels.py  metadata.py  multiscale.py  ome_xml.py  open.py  repair.py  rois.py  tables.py  timing.py
microio/writer/: __init__.py  common.py  convert.py  images.py  infer.py  ngff.py  scene_selection.py  setup.py  source.py  tables.py  xmlparse.py
scripts/: benchmark_workspace_creation.py  compare_to_reference_zarr.py  inspect_zarr.py  napari_smoke_open.py  repair_zarr.py  test_writer_lif.py  test_writer_vsi.py
tests/: conftest.py  test_scene_selection.py
tests/helpers/: datasets.py  external_datasets.py
tests/integration/: test_reader_basic.py  test_reader_workflow.py  test_workspace_workflow.py  test_writer_workflow.py
tests/perf/: test_metadata_size_guard.py
tests/unit/: test_reader_access.py  test_reader_labels.py  test_reader_roi.py  test_reader_time_provenance.py  test_reader_validation.py  test_reader_window_repair.py  test_scene_id.py  test_table_reader.py  test_units.py  test_workspace.py  test_writer_ngff_sampling.py  test_writer_validation.py
