[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "microio"
version = "0.1.0"
description = "Microscopy IO library for VSI/LIF to OME-Zarr and OME-Zarr reading"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "zarr>=3.0.0",
  "dask[array]",
  "ome-zarr>=0.12.0",
  "psutil",
  "bioio",
]

[project.optional-dependencies]
writer = [
  "bioio-bioformats",
  "scyjava",
]
dev = [
  "pytest",
]

[project.scripts]
microio = "microio.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["microio*"]
