[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "microio"
version = "0.2.0"
description = "Reader-first microscopy IO library for bioformats2raw OME-Zarr inspection and enrichment"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "zarr>=3.0.0",
  "dask[array]",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.scripts]
microio = "microio.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["microio*"]
